--- a/index.css
+++ b/index.css
@@ -20,7 +20,9 @@
   font-variation-settings:
     "wdth" 100;
 }
-
+body{
+    margin: 0px;
+}
 .cart{
     width: 20px;
     height: 20px;
@@ -193,6 +195,96 @@ font-weight: normal;
     gap: 30px;
 }
 
+.see_more{
+    margin: 0px;
+    font-size: 24px;
+    font-weight: bold;
+    color: rgba(224, 44, 109, 0.87);
+}
+.arrow{
+    width: 16px;
+    height: 14px;
+}
+.more{
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-end;
+    align-items: center;
+    margin-right: 420px;
+    gap: 8px;
+    margin-top: 50px;
+}
+.gear{
+    width: 404px;
+    height: 270px;
+    
+    margin: 0px;
+}
+.feature{
+    margin: 0px;
+    font-size: 38px;
+    font-weight: bold;
+    color: rgba(10, 8, 38, 1);
+}
+.last_pera{
+    margin: 0px;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgba(108, 108, 108, 1);
+}
+.join{
+    width: 155px;
+    height: 44px;
+    border-radius: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.lasly{
+    width: 610px;
+    height: 224px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+}
+.fourth_sec{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    gap: 90px;
+    align-items: center;
+    justify-content: center;
+}
+.in{
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0px;
+}
+.copy{
+    margin: 0px;
+    font-size: 16px;
+    font-weight: normal;
+}
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    
+}
+footer{
+    margin-top: 150px;
+    background-color:rgba(10, 8, 38, 1) ;
+    color: white;
+    height: 211px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 @media  screen and (max-width:576px) {
     .header{
         flex-direction: column;
@@ -246,4 +338,27 @@ font-weight: normal;
         grid-template-columns: repeat(1,1fr);
         gap: 15px;
     }
+    .more{
+        justify-content: center;
+        align-items: center;
+        margin: 0px;
+        margin-top: 15px;
+    }
+    .fourth_sec{
+        flex-direction: column-reverse;
+        justify-content: center;
+        gap: 50px;
+        
+    }
+    .lasly{
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+    }
+    footer{
+        margin-top: 70px;
+    }
+    
 }
